2008-06-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionTests.cs,
	  MonoDevelop.Projects/MSBuildTests.cs,
	  MonoDevelop.Projects/MdsTests.cs,
	  MonoDevelop.Projects/TestProjectsChecks.cs: Track api changes.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionTests.cs: New tests for checking
	  solution configuration mappings.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/MSBuildTests.cs: Test fixes.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionTests.cs, Util.cs: Added new test.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/TestProjectsChecks.cs, UnitTests.mdp: Use full
	  names when creating package references.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionTests.cs,
	  MonoDevelop.Projects/WorkspaceTests.cs,
	  MonoDevelop.Projects/MSBuildTests.cs,
	  MonoDevelop.Projects/MdsTests.cs,
	  MonoDevelop.Projects/TestProjectsChecks.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionTests.cs,
	  MonoDevelop.Projects/MakefileTests.cs,
	  MonoDevelop.Projects/WorkspaceTests.cs,
	  MonoDevelop.Projects/MSBuildTests.cs,
	  MonoDevelop.Projects/MdsTests.cs,
	  MonoDevelop.Projects/PackagingTests.cs,
	  MonoDevelop.Projects/ProjectTests.cs,
	  MonoDevelop.Projects/MonoDeveloperFormatTests.cs,
	  MonoDevelop.Projects/TestProjectsChecks.cs, Util.cs, TestBase.cs:
	  New unit test infrastructure.

