@@ -25,6 +25,7 @@
     <File name="MonoDevelop.Projects/WorkspaceTests.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Projects/PackagingTests.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Projects/MakefileTests.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.Projects/DomPersistenceTests.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
