@@ -1,3 +1,8 @@
+2008-06-17  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Projects/DomPersistenceTests.cs: Added dom persistence
+	  unit tests.
+
 2008-06-16  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Projects/SolutionTests.cs,
